mux-compiler/tests/snapshots/executable_integration__executable_integration__parser_missing_comma_params.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux_compiler run /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_missing_comma_params.mux`
error: 4 errors found

error: Expected ')' after parameters
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_missing_comma_params.mux:2:16
   |
 2 | func foo(int a int b) returns int {
   |                ^^^

error: Expected expression, found ')'
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_missing_comma_params.mux:2:21
   |
 2 | func foo(int a int b) returns int {
   |                     ^

error: Expected expression, found 'Returns'
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_missing_comma_params.mux:2:23
   |
 2 | func foo(int a int b) returns int {
   |                       ^^^^^^^

error: Expected newline before statement
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_missing_comma_params.mux:2:35
   |
 2 | func foo(int a int b) returns int {
   |                                   ^
